fixed spacing between columns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ h3 {
     font-family: 'Cabin Sketch', cursive;
     background-color: rgb(111, 126, 211, 0.2);
     margin: 30px;
-    margin-left: 100px;
+    margin-left: 110px;
     padding: 20px;
     width: 300px;
     height: 165px;
@@ -52,6 +52,7 @@ h3 {
     font-family: 'Cabin Sketch', cursive;
     background-color: rgb(111, 126, 211, 0.2);
     margin: 30px;
+    margin-left: 5px;
     padding: 20px;
     width: 300px;
     height: 165px;
